@@ -14,24 +14,24 @@ DIST dnsmasq-2.66.tar.xz 401056 SHA256 5e143947527bcdc46a30f4b1bbdfbfa96333dd98b
 DIST dnsmasq-2.72.tar.xz 454048 SHA256 7d0bd23f5d74b3a6b26a75d5ffcf9db81d461b47cbe578cb65a83a98008600b1 SHA512 d84b89c987966a5f5880aa329833626b0a017628dd6aa667bdad880d1c5f101a386dddb439eb6983d58952a36f25670bf58df94281b89320f02895a3e6af4cec WHIRLPOOL 491eadb0060f372a0b7f5855fb57040c4baf37352732a2943fb4173aa28e875b91537f87085201f13e76ec5680e4ad681992829a5cef800833be0911298a793c
 EBUILD dnsmasq-2.66.ebuild 3181 SHA256 2811d53903d109cc344c962bfa49e6c9f857242931663042a74e0778c145da9e SHA512 2efdee54d8dd70be76cbce1e6b729618c1e79170dca1f054cf0f12ca0eca5ab65a5a61471fe913f5851f4d97c36fb83203d5d23fb6512ea30e6d4ea9ab16c124 WHIRLPOOL 8c49095c02073fe3b56fcff2f2333b7724fff270ecf03908b351d902be95d9ad80b1b20dafd9f8739b2c93f38027a62a8bc1580dfba8000b5f1efe29e1f0cb15
 EBUILD dnsmasq-2.72-r1.ebuild 4438 SHA256 5c4f9c49e5153fbda1a40a13f2223e5dd74076e7d4074a2cd59cc0b11d226ad4 SHA512 f32ad3413bf929f6c42ad43972504cc871a07229220eac103a0c4adf4c817aba2120e6239813f0cc43ca39da3b7857c4913a616984a7845b03214e9edd323d26 WHIRLPOOL 3b1b356aea6f9ccc83de4dfb58673d57768a209a49762bdfd784185806140d1eb5a7ba740c6fd238c86fe305a1225c2639cccd58051bae6af3c8edc727798acf
-EBUILD dnsmasq-2.72-r2.ebuild 4473 SHA256 6417f96db4694573151a88417e299e0f7df0604b0c1b5f5bb72166be339569b0 SHA512 37130775cc4391fdc977a59b64305629e98209446ac9fe4778029fddc9391f2342d82424dc92784e9a9bd828e7880ea24f959ebc5f32323077f045df4d6c944d WHIRLPOOL 6c65f7bbadd1d1228a1ed7199e61a47bf54809933cdc7e6844158e2391879202d376539e37f8d1feee2987c5a2508d7252a6aea605f9adf208cccf3fe2090a0a
+EBUILD dnsmasq-2.72-r2.ebuild 4479 SHA256 50094a3d8405c24d7008589ac69571da73048aac85e37b0325f717631e47a0e9 SHA512 e3301a4c44fd13b7740a34d2d22d45d82473422cfa6d86824ff3f8124c127e87e51766f09131faeb01b5d781f9c9b495adc6b65623770ab368303e5e1c6f67c3 WHIRLPOOL 90b197e0f4751925712bd4877b0d0135349cb434956841df6cefdeb2e4f96db72a0a9f5a9613363ec80f3c59d6f69a6cc2dbbeb79642edc029263b3016e0adc8
 EBUILD dnsmasq-2.72.ebuild 4228 SHA256 8aaf3cbf173910c5adf0d25068289727d9c8eacbd1c5778883d252e6d1670c54 SHA512 31b9d191248ac827dabe6f02558051697f5d9d38a0591891045b87ec8e87062e14575bb95c1b21f88cf4374ed8ad68537c927deac977f2299fda27ba6d279aeb WHIRLPOOL a2a8fd6ffbd0e4da4250ac39a0f0ea1484eee1450c5b3e32d4a6ba702461be7cd1b8ec33efa86b97703c22523dab052da5079c7a1c304afb3dcf2c3990926e62
-MISC ChangeLog 36533 SHA256 53bb1686c7312a1ab22dcae84a53b39af0a6f8b73aa65673f362c6b5c7c9a008 SHA512 2d3952ed0286fcfd24bd78ae48fa3e983f3f0bdb706168321a3fc94580a5deaffc3104f7250532aa114f891bf2d7b7cce6467b5472b2f932bec35983c10629df WHIRLPOOL 50bec7856bc91694227f898e98bde26af46dbb8cc36ca061fc4ff177e8d22972b7b757d02da0701c19230fd81d7776488ad83a5d773483588ba86bf579c3e434
-MISC metadata.xml 807 SHA256 6fb95e16dba00e7466dd6f5fb4820c799a2f54fbc05e5b4a0791b0ac11520359 SHA512 593d4c571ec9e3927988aeb5072af21b7c5f4fc6b55a1a7ebbd1d03c14aa0a0cfa026eb5ba6547370105792485b74f8d9c8350e4b606dbe1bcf4a89aa6d73359 WHIRLPOOL e7690f451f0c10784b6d6b0902c97aac877c0d76ffe66954daa79294c1e74665e9b5d28749a594a6a1dd7c7f755a88fd942fed4619c2bf2b31e75ef5b762dd6f
+MISC ChangeLog 36706 SHA256 9ba473c6d109fa468b6509b655ef6cb2edf6c8b9602ffee67ab544d89efd8576 SHA512 78b431806c4f041b8c0b5935e9a17184b72b13e80334487bacaa933f01a36410d0fe0dcd2c0459ca7df5460355f9847cec66ff78f2518b5b240991d6b5f090b7 WHIRLPOOL a445c14e0b2fb92a3e36fdcdc2395032497752c7cd7c803e7865b3450b786c88bee5f48c390193a6ac11d61653450bb768cdbdac7d169ac442bb7e5cfb427d73
+MISC metadata.xml 890 SHA256 7952192e999afd4942b22e31dbaa1a8cb4972e5a8f7f8596476277c294dbc84d SHA512 7d3f3d84bc34eb57a241c2f6781561a3247ef24def3d22b64b603f490d0ca922223c2a8772b8d728f5ed3c063219ddbf6d03a5e891ca0a71d5497bb6068017b6 WHIRLPOOL f3bce03b7bf361f9456b1a342e8c40b71dce5ca0d5e0b9653859d5e4f08e2c44c8ad09e30bc51d1c9d3492fbe8ce42c0532bda3b8b8de1b693c1a8557cd75aad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVQRRbAAoJEHy/RO9cNQiDh4wQAKcjLGMXbHnzo4qVnpOWkR2f
-FgFuBu7dXUXH8yneqARqcp3OQTNOQJ6Bj+Vt46hxgF1anVuKQIxGvuGA2VQgBYe+
-kJNcYK8VLQc/Q3ruNJQO+Bc4pEt25bm6itIoixOClDH3y75GVNDb2N8K7Np9ZKVR
-WHskTKwOesoljgp05Q8ZlraOYtbK+R19+RoN07l7a5WJKXP0Gv/U4tFdT+JdwnTp
-OOQKE3l3f6e4eYAaQ7flthRgqOSiqXWXipVTcYul6/bVw4JUtEkZgnIVjGKnwVfM
-PION0snSHCPcxxeOZ5jdxow1MJrk0TJy1FDIDJEEaiK2uybqPEq2rmhVyS+owGUD
-cNB2YRW4vdRILMnmoGV2k1yP8fOy/vfl59unc432Cj4x5AYpz+9A9KkXMzHEtT8b
-oUHPrw/wUJC7I9OuVaghkqONJ2THHd9w3deIAfKoJgAXa5WodCunH84h72W1P0cF
-mekeds4S4pSNmgpaNXXG3sph9yMThnIrLE0PG979+rMcPQx+eYZX3TkTw3zb6DHQ
-ayOg+0ZYxh5SFKqvzQaiSnBw+hbGvtvNBXScG2OQ5kQuHmj3lpF45n9fmbqV/KTw
-kPalgy3WH5SQN81y+f5Q16OvggWlkd21XXb63g7TJ8ZHFH0I7lsJ35EhOKUaXvAf
-hCqNnX0LYwjRVQFNrKle
-=MSuO
+iQIcBAEBCAAGBQJVQe5lAAoJEPGu1DbS6WIA+UgP/0K7sHg8JUNyTgaqiWxmEqR/
+I6L56Y/0L5YxQGrwdAxxxljuycDRTYhV8DO4tfFxx1KS8HWpZ1LoblTpY0gnA0nu
+PFhpX6FGLipqwIdvRbbUWcAZL1h4nLawr2DtXelX4bfVyIXYcbXLVkAcSToLSQMI
+CJCMiJ3prT5A734+G5PPCoEaYBmTL20nU6Jq3DDPTY/HvtOzoWJcV1mDJMi254Ih
+2KTkZrap6p9hX82F0eXO9y5bUWv+LxdxlNwKSGIRN5PnTBqf8bn3RRvuxToN8qrr
+8g2zLvUbroWPsp9615Sjcbocmph+ccD+kS9ADi5Ve4IhryozCuW7U0SRfC8I9Ina
+hDjncGpxXUsB3DKWT+WxeNRD/vo9CWPFy+EVmjK5svGv16NTY26QMp0XVQkbckL8
+g1RAeXZ+/kgf3UYTk4W3aho8D+l1WCGWDa3ulKJ9fF/1fQiDUo4J817fzLl7VWlY
+FdPyH0y8goGGvfYCYbeLB3PcByYwPhF0W2Bm3bpYe+fad8MEIi5CBLgW1sabhZwv
+6khQKtMdA1TLfmzxZBMhPD5rtv12eMsSm3Z2masDO9RBQaq4C67Ck6TKQ3UJLDwY
+AkPj4oqJFTXkPlCRTt2uLI9AIr79qISzeUqNQBW9mLMnZSz4ILDLBtIby9zay+TB
+pc86TLrnfZdlvVHXtxUf
+=06r5
 -----END PGP SIGNATURE-----
