@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/dnsmasq
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.266 2015/04/29 17:26:40 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.268 2015/04/30 08:57:08 vapier Exp $
+
+  30 Apr 2015; Mike Frysinger <vapier@gentoo.org> metadata.xml:
+  Add CPE info.
+
+  30 Apr 2015; Mike Frysinger <vapier@gentoo.org> dnsmasq-2.72-r2.ebuild:
+  Better HOMEPAGE.
 
 *dnsmasq-2.72-r2 (29 Apr 2015)
 
